Fix background and gradient overflow regressions

--- a/src/assets/scss/_custom.scss
+++ b/src/assets/scss/_custom.scss
@@ -34,6 +34,11 @@
   @extend .bg-gray-light;
 }
 
+.canvas {
+  position: relative;
+  overflow: hidden;
+}
+
 .canvas-wrapper {
   padding: 6rem;
   display: flex;
