--- a/src/components/CanvasWrapper/CanvasWrapper.scss
+++ b/src/components/CanvasWrapper/CanvasWrapper.scss
@@ -13,7 +13,7 @@
   .blur {
     width: 100%;
     height: 100%;
-    position: fixed;
+    position: absolute;
   }
 
   .rounded-none {
